js/js.translator/testData/incremental/invalidation/openClassWithInternalField/main/B.0.kt
class B: A() {
    val prop: Int
        get() = 10000

    fun func(): Int = 20000
}
